--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
 <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;600&display=swap" rel="stylesheet">
 <style>
 html, body {
-  height: 100%;
-  overflow-x: hidden;
-  overflow-y: auto; /* scroll solo se necessario */
-  margin: 0;
-  padding: 0;
+  margin:0;
+  padding:0;
+  overflow-x:hidden;
+  overflow-y:hidden; /* disabilita scroll verticale */
+  height:100%;
 }
 
 body {
@@ -22,18 +22,27 @@ body {
   padding: 30px 20px;
   text-align: center;
   position: relative;
-  min-height: 100vh; /* almeno l'altezza della finestra */
   background: black;
 }
 
-#stars { 
-  position: absolute; /* canvas non fissa più */
-  top:0; left:0; width:100%; height:100%; z-index: -1; 
+#stars {
+  position: absolute;
+  top:0;
+  left:0;
+  width:100%;
+  height:100%;
+  z-index:-1;
 }
 
-#chart { display: block; margin: 20px auto; }
+#chart {
+  display: block;
+  margin: 20px auto;
+}
 
-#ricomincia { display: block; margin: 20px auto; }
+#ricomincia {
+  display: block;
+  margin: 20px auto;
+}
 
 h1 { color: #ffe81f; letter-spacing:2px; margin-bottom:10px; }
 h2 { margin-top:0; }
@@ -46,9 +55,7 @@ h2 { margin-top:0; }
 .domanda.esci { animation: fadeOutDown 0.5s ease forwards; }
 
 label { display:block; background: rgba(255,255,255,0.05); border-radius:8px; padding:12px; margin:12px 0; cursor:pointer; transition: all 0.3s; }
-input[type="radio"] { display:none; }
-
-label:hover { background: rgba(255,255,255,0.15); }
+input[type="radio"] { display:none; } /* nasconde i cerchi dei radio button */
 
 button {
   margin-top:25px; padding:16px 36px; font-size:18px; font-family:'Orbitron',sans-serif;
@@ -76,7 +83,7 @@ button:active::before { box-shadow:0 0 60px #3f8cff,0 0 100px #3f8cff inset; opa
 </style>
 </head>
 <body>
-  <!-- Logo in cima -->
+<!-- Logo in cima -->
 <img src="logo.png" style="width:150px; height:auto; display:block; margin: 0 auto 20px;">
 
 <canvas id="stars"></canvas>
@@ -87,16 +94,16 @@ button:active::before { box-shadow:0 0 60px #3f8cff,0 0 100px #3f8cff inset; opa
 <!-- Domande -->
 <div class="domanda attiva">
   <h2>Domanda 1: Quale lato della Forza ti attrae di più?</h2>
-  <label data-value="jedi">La luce e l'equilibrio</label>
-  <label data-value="sith">Il potere e la passione</label>
-  <label data-value="grigio">Entrambi, a seconda del momento</label>
+  <label><input type="radio" name="q0" value="jedi"> La luce e l'equilibrio</label>
+  <label><input type="radio" name="q0" value="sith"> Il potere e la passione</label>
+  <label><input type="radio" name="q0" value="grigio"> Entrambi, a seconda del momento</label>
 </div>
 
 <div class="domanda">
   <h2>Domanda 2: Cosa faresti se qualcuno ti provocasse?</h2>
-  <label data-value="jedi">Rimango calmo e ragiono</label>
-  <label data-value="sith">Colpirei subito con forza</label>
-  <label data-value="grigio">Dipende dalla situazione</label>
+  <label><input type="radio" name="q1" value="jedi"> Rimango calmo e ragiono</label>
+  <label><input type="radio" name="q1" value="sith"> Colpirei subito con forza</label>
+  <label><input type="radio" name="q1" value="grigio"> Dipende dalla situazione</label>
 </div>
 
 <button id="next">Avanti</button>
@@ -115,23 +122,13 @@ const chartCanvas=document.getElementById("chart");
 const ctxChart=chartCanvas.getContext("2d");
 const socialsDiv=document.getElementById("socials");
 let punteggi={jedi:0,sith:0,grigio:0};
-let selectedValue="";
 
 function aggiornaProgress(){ progressBar.style.width=((domandaCorrente)/domande.length*100)+"%"; }
 
-domande.forEach((dom, i)=>{
-  dom.querySelectorAll("label").forEach(l=>{
-    l.addEventListener("click",()=>{
-      dom.querySelectorAll("label").forEach(lbl=>lbl.style.background="rgba(255,255,255,0.05)");
-      l.style.background="rgba(255,232,31,0.4)";
-      selectedValue=l.dataset.value;
-    });
-  });
-});
-
 nextBtn.addEventListener("click",function(){
-  if(!selectedValue){ alert("Seleziona una risposta!"); return; }
-  punteggi[selectedValue]++;
+  const selected=document.querySelector('input[name="q'+domandaCorrente+'"]:checked');
+  if(!selected){ alert("Seleziona una risposta!"); return; }
+  punteggi[selected.value]++;
 
   const currentDomanda = domande[domandaCorrente];
   currentDomanda.classList.add("esci"); 
@@ -142,7 +139,6 @@ nextBtn.addEventListener("click",function(){
       domande[domandaCorrente].classList.add("attiva"); 
     } else { mostraRisultato(); }
     aggiornaProgress();
-    selectedValue=""; // reset selezione
   },500);
 });
 
@@ -167,7 +163,7 @@ function mostraRisultato(){
   ricominciaBtn.style.boxShadow=`0 0 20px ${colore},0 0 50px ${colore} inset`;
   progressBar.style.width="100%";
 
-  // stelle effetto finale
+  // ---- effetto rilascio Forza ----
   for(let i=0;i<50;i++){
     const p=document.createElement("div");
     p.style.position="absolute";
@@ -180,7 +176,7 @@ function mostraRisultato(){
     output.appendChild(p);
   }
 
-  // grafico a torta
+  // ---- grafico a torta ----
   ctxChart.clearRect(0,0,chartCanvas.width,chartCanvas.height);
   const data = [
     {label:"Jedi", value:punteggi.jedi, color:"#3f8cff"},
@@ -196,23 +192,41 @@ function mostraRisultato(){
     ctxChart.closePath();
     ctxChart.fillStyle=d.color;
     ctxChart.fill();
+    
+    // etichetta percentuale solo se > 0
     const midAngle = startAngle + sliceAngle/2;
     const labelX = 150 + Math.cos(midAngle)*80;
     const labelY = 150 + Math.sin(midAngle)*80;
-    ctxChart.fillStyle="#fff";
-    ctxChart.font="16px 'Orbitron'";
-    ctxChart.textAlign="center";
-    ctxChart.textBaseline="middle";
     const perc = totale===0 ? 0 : Math.round((d.value/totale)*100);
-    if (perc>0) ctxChart.fillText(perc+"%", labelX, labelY);
+    if (perc > 0) {
+      ctxChart.fillStyle="#fff";
+      ctxChart.font="16px 'Orbitron'";
+      ctxChart.textAlign="center";
+      ctxChart.textBaseline="middle";
+      ctxChart.fillText(perc+"%", labelX, labelY);
+    }
     startAngle += sliceAngle;
   });
 
-  // socials
+  // ---- social links ----
   socialsDiv.innerHTML = `
-    <a href="https://www.instagram.com/jgacademy.national" target="_blank"><img src="instagram.png" width="40"></a>
-    <a href="https://www.instagram.com/jgacademy.pavia" target="_blank"><img src="instagram.png" width="40"></a>
-    <a href="https://www.tiktok.com/@jgacademy.pavia" target="_blank"><img src="tiktok.png" width="40"></a>
+    <a href="https://www.instagram.com/jgacademy.national" target="_blank" style="text-decoration:none;">
+      <svg width="40" height="40" viewBox="0 0 24 24" fill="#E1306C" xmlns="http://www.w3.org/2000/svg">
+        <path d="M7.75 2h8.5C19.55 2 22 4.45 22 7.75v8.5C22 19.55 19.55 22 16.25 22h-8.5C4.45 22 2 19.55 2 16.25v-8.5C2 4.45 4.45 2 7.75 2zm0 1.5C5.68 3.5 4 5.18 4 7.25v8.5C4 18.32 5.68 20 7.75 20h8.5c2.07 0 3.75-1.68 3.75-3.75v-8.5C20 5.18 18.32 3.5 16.25 3.5h-8.5z"/>
+        <path d="M12 7a5 5 0 1 1 0 10 5 5 0 0 1 0-10zm0 1.5a3.5 3.5 0 1 0 0 7 3.5 3.5 0 0 0 0-7zM17.5 6.5a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/>
+      </svg>
+    </a>
+    <a href="https://www.instagram.com/jgacademy.pavia" target="_blank" style="text-decoration:none;">
+      <svg width="40" height="40" viewBox="0 0 24 24" fill="#E1306C" xmlns="http://www.w3.org/2000/svg">
+        <path d="M7.75 2h8.5C19.55 2 22 4.45 22 7.75v8.5C22 19.55 19.55 22 16.25 22h-8.5C4.45 22 2 19.55 2 16.25v-8.5C2 4.45 4.45 2 7.75 2zm0 1.5C5.68 3.5 4 5.18 4 7.25v8.5C4 18.32 5.68 20 7.75 20h8.5c2.07 0 3.75-1.68 3.75-3.75v-8.5C20 5.18 18.32 3.5 16.25 3.5h-8.5z"/>
+        <path d="M12 7a5 5 0 1 1 0 10 5 5 0 0 1 0-10zm0 1.5a3.5 3.5 0 1 0 0 7 3.5 3.5 0 0 0 0-7zM17.5 6.5a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/>
+      </svg>
+    </a>
+    <a href="https://www.tiktok.com/@jgacademy.pavia" target="_blank" style="text-decoration:none;">
+      <svg width="40" height="40" viewBox="0 0 24 24" fill="#69C9D0" xmlns="http://www.w3.org/2000/svg">
+        <path d="M12 2v7.5a4.5 4.5 0 1 0 4.5 4.5V7.5h3V2h-7.5z"/>
+      </svg>
+    </a>
   `;
   socialsDiv.style.display="flex";
 }
@@ -241,12 +255,10 @@ ricominciaBtn.addEventListener("click",function(){
 const canvas=document.getElementById('stars');
 const ctx=canvas.getContext('2d');
 let width=canvas.width=window.innerWidth;
-let height=canvas.height=window.innerHeight;
+let height=canvas.height=document.body.scrollHeight; // altezza del contenuto
 const stars=[];
 const numStars=150;
-for(let i=0;i<numStars;i++){ 
-  stars.push({ x:Math.random()*width, y:Math.random()*height, r:Math.random()*1.5+0.5, dx:(Math.random()-0.5)/2, dy:(Math.random()-0.5)/2 }); 
-}
+for(let i=0;i<numStars;i++){ stars.push({ x:Math.random()*width, y:Math.random()*height, r:Math.random()*1.5+0.5, dx:(Math.random()-0.5)/2, dy:(Math.random()-0.5)/2 }); }
 function animateStars(){ 
   ctx.clearRect(0,0,width,height); 
   for(let s of stars){ 
@@ -258,10 +270,3 @@ function animateStars(){
     if(s.x<0)s.x=width; if(s.x>width)s.x=0; 
     if(s.y<0)s.y=height; if(s.y>height)s.y=0; 
   } 
-  requestAnimationFrame(animateStars); 
-}
-animateStars();
-window.addEventListener('resize',()=>{ width=canvas.width=window.innerWidth; height=canvas.height=window.innerHeight; });
-</script>
-</body>
-</html>
